Update README with professional polish, integration test docs, and Mockito notes
- Add phase breakdown table (Part 01–04) to Overview
- Expand Architecture section with REST API call flow
- Add Notes column to Design Patterns table
- Expand Custom Framework section with per-request vs per-class caching detail
- Add REST API response schema and curl examples
- Expand project structure tree with inline annotations on every key file
- Add test/resources/mockito-extensions/ to structure tree
- Add ChatControllerIntegrationTest to Testing table with type column
- Add testing notes: MockitoBean rationale, subclass mock maker explanation
- Expand Design Decisions table with two-table rationale and mock-maker-subclass entry

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>